--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ marquee{
    <a href="wdpf.png" target="_blank">HTML</a>
    <a href="wdpf.png" target="_blank">CSS</a>
    <a href="wdpf.png" target="_blank">Bootstrap</a>
-   <a href="wdpf.png" target="_blank">JS(JavaScript)</a>
+   <a href="JavaScript.html" target="_blank">JS(JavaScript)</a>
    <!-- <a href="" target="_blank"></a> -->
    
 
