--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   box-sizing: border-box;
 }
 body{
-  background-image:url(Images/code6.jpg) ;
+  background-image:url(Images/bgtwo.jpg) ;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
