--- a/JavaScript.html
+++ b/JavaScript.html
@@ -112,13 +112,13 @@ h3:hover .hide{
 <div class="content">
   <a href="https://youtu.be/Y6dvo-WNfDQ?si=MimGmiPaloEBceYY" target="_blank">Video-Link</a>
   <center><h3>Sir-Work</h3></center>
-  <a href="JS(JavaScript)/Class 08/practice_file.html" target="cf">Practice-File</a> <br><br>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Form-Validation</a><br><br>
+  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Practice-File</a> <br><br>
+  <a href="JS(JavaScript)/Class 08/Sir-Work/form_validationEx.html" target="cf">Form-Validation</a><br><br>
   <center>
     <h3>My-Work</h3>
   </center>
-  <a href="JS(JavaScript)/Class 08/practice_file.html" target="cf">Practice-File</a> <br><br>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Form-Validation</a><br><br>
+  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Practice-File</a> <br><br>
+  <a href="JS(JavaScript)/Class 08/Sir-Work/form_validationEx.html" target="cf">Form-Validation</a><br><br>
   <iframe style="height: 900px; width: 100%;" src="" frameborder="none" name="cf"></iframe>
 </div>
 <button class="collapsible">Hello9</button>
