--- a/JS(JavaScript)/QstnnNanswer.html
+++ b/JS(JavaScript)/QstnnNanswer.html
@@ -104,38 +104,64 @@ h3:hover .hide{
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
-<button class="collapsible">Hello7</button>
+<button class="collapsible">Mathemetical Operators ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <pre>
+    + (Plus)
+    - (Minus)
+    * (Multipication) 
+    / (Divide)
+    % (Percentage)
+  </pre>
 </div>
-<button class="collapsible">Day-8</button>
+<button class="collapsible">Logical Operators ?</button>
 <div class="content">
-  <a href="https://youtu.be/Y6dvo-WNfDQ?si=MimGmiPaloEBceYY" target="_blank">Video-Link</a>
-  <center><h3>Sir-Work</h3></center>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Practice-File</a> <br><br>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/form_validationEx.html" target="cf">Form-Validation</a><br><br>
-  <center>
-    <h3>My-Work</h3>
-  </center>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/practice_file.html" target="cf">Practice-File</a> <br><br>
-  <a href="JS(JavaScript)/Class 08/Sir-Work/form_validationEx.html" target="cf">Form-Validation</a><br><br>
-  <iframe style="height: 900px; width: 100%;" src="" frameborder="none" name="cf"></iframe>
+  <pre>
+    &&(AND)
+    ||(OR) 
+    !(NOT)
+  </pre>
 </div>
-<button class="collapsible">Hello9</button>
+<button class="collapsible">Comparison Operator ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+ <pre>
+  == (Equal Operator)
+	!= (Not Equal)
+	> (Greater Than)
+	< (Less Than)
+	>= (Greater Than or Equal)
+	<= (Less Than or Equal)
+
+ </pre>
 </div>
-<button class="collapsible">Hello10</button>
+<button class="collapsible">Assignment Operators ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <pre>
+  = (value assignment)
+	+= (assign and add)
+	-= (subtruct then assign)
+	*=
+	/=
+  %=
+ **=
+
+  </pre>
 </div>
-<button class="collapsible">Hello11</button>
+<button class="collapsible">Increment/Decrement Operators ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+ <pre>
+  ++ (increment operator)
+  -- (decrement operator)
+
+ </pre>
 </div>
-<button class="collapsible">Hello12</button>
+<button class="collapsible">Types Of Loops ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <pre>
+    1. For loop 
+    2. While 
+    3. Do...while loop
+  </pre>
 </div>
 <button class="collapsible">Hello13</button>
 <div class="content">
