--- a/JS(JavaScript)/JavaScript.html
+++ b/JS(JavaScript)/JavaScript.html
@@ -76,6 +76,8 @@ h3:hover .hide{
 <body>
 
 <center><h1>Today's Topic</h1></center>
+<a href="fulljs.html" target="_blank">Full JavaScript</a>
+<a href="QstnnNanswer.html" target="_blank">Q & A</a>
 
 
 <button class="collapsible">Start</button>
