--- a/JS(JavaScript)/Class-11/Sir-Work/addEventListner.html
+++ b/JS(JavaScript)/Class-11/Sir-Work/addEventListner.html
@@ -7,15 +7,15 @@
 
 	<button id="btn">Click Here</button>
 
-	<script type="text/javascript">
-		/*var a = (num1, num2)=>
+	<script>
+		var a = (num1, num2)=>
 		{
-			var x = Number(prompt("Enter Num1"));
-			var y = Number(prompt("Enter Num2"));
+			var x = Number(prompt("Enter Number-1"));
+			var y = Number(prompt("Enter Number-2"));
 			var z = x + y;
 			alert("Total is:"+z);
 		}
-		a();*/
+		a();
 
 		document.getElementById("btn").addEventListener('click',(num1,num2)=>{
 
