--- a/JS(JavaScript)/Class-11/Sir-Work/imageObject.html
+++ b/JS(JavaScript)/Class-11/Sir-Work/imageObject.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Image Object Ex.</title>
-	<style type="text/css">
+	<style>
 		.result
 		{
 			font-size: 18px;
@@ -18,13 +18,13 @@
 </head>
 <body>
 
-	<h1>Loading Image...</h1>
+	
 	<div class="result">
 		
 	</div>
 
 	<button class="btn">Click</button>
-	<h4>***click the above button to show the notice...</h4>
+	
 
 	<script>
 		var resEle = document.querySelector(".result");
