--- a/JS(JavaScript)/Class-11/Sir-Work/querySelector.html
+++ b/JS(JavaScript)/Class-11/Sir-Work/querySelector.html
@@ -3,7 +3,7 @@
 <head>
 	<title>JavaScript querySelector Ex.</title>
 
-	<style type="text/css">
+	<style>
 		div
 		{
 			border: 1px solid black;
@@ -28,7 +28,7 @@
 	</div>
 	<button onclick="func1()">Click to Change</button>
 
-	<script type="text/javascript">
+	<script>
 		function func1()
 		{
 			var xyz = document.querySelector("div > p");
