--- a/JS(JavaScript)/JavaScript.html
+++ b/JS(JavaScript)/JavaScript.html
@@ -90,6 +90,7 @@ h3:hover .hide{
 <div class="content">
   <h3>Sir-Work</h3>
   <a href="Class-1/Sir-Work/basic_JavaScript.html" target="_blank">Basic Java Script</a><br><br>
+  <a href="Class-1/basic.txt" target="_blank">Basic-Rules</a><br><br>
   <a href="Class-1/Sir-Work/What is JavaScript.docx" target="_blank">MS Word </a><br><br>
   <a href="https://youtu.be/qhTl_B1r374" target="_blank">Video</a><br><br>
   <a href="Class-1/DOCTYPE.pdf" target="_blank">PDF Code</a><br><br>
