--- a/JS(JavaScript)/QandA.html
+++ b/JS(JavaScript)/QandA.html
@@ -78,31 +78,119 @@ h3:hover .hide{
 <center><h1>Today's Topic</h1></center>
 
 
-<button class="collapsible">Hello1</button>
+<button class="collapsible">Demo</button>
 <div class="content">
   <a href="https://www.allbanglanewspapersbd.com/rtv-online/" target="cf">Word</a> <br><br>
   <a href="https://www.allbanglanewspapersbd.com/prothom-alo/" target="cf">news</a><br><br>
   <iframe style="height: 900px; width: 100%;" src="" frameborder="none" name="cf"></iframe>
 </div>
-<button class="collapsible">Hello2</button>
+<button class="collapsible">JS Full Form?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  JavaScript
 </div>
-<button class="collapsible">Hello3</button>
+<button class="collapsible">What is javascript extension ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  script.js
 </div>
-<button class="collapsible">Hello4</button>
+<button class="collapsible">What is javascript?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  programming language.এটা কে High level scripting language বলা হয়।
 </div>
-<button class="collapsible">Hello5</button>
+<button class="collapsible"> is javascript client side & server side language?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  yes
 </div>
-<button class="collapsible">Hello6</button>
+<button class="collapsible">JavaScript Case-Sensitive ?</button>
 <div class="content">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+Yes
+</div>
+<button class="collapsible">JavaScript এর remainder / modules বলতে কি বুঝায় ?</button>
+<div class="content">
+ভাগশেষ।
+</div>
+<button class="collapsible">JavaScript এ Variable এর মান যদি numeric value হয় তবে কি Quotation mark বসাতে হবে ?</button>
+<div class="content">
+না।
+</div>
+<button class="collapsible">JavaScript এ কি Variable এর Name / Value এর ক্ষেত্রে বাংলা ব্যবহার করা যাবে ?</button>
+<div class="content">
+  না।
+</div>
+<button class="collapsible">JavaScript এ variable এর value কত প্রকার হতে পারে ?</button>
+<div class="content">
+<li>String (দড়ি)</li>
+<li>numeric</li>
+<li>boolean (true / false)</li>
+<li>array</li>
+<li>object</li>
+</div>
+<button class="collapsible">Assign বলতে কি বুঝায় ?</button>
+<div class="content">
+নির্ধারিত করা / স্থির করা
+</div>
+<button class="collapsible">Numeric value কত প্রকার হতে পারে ?</button>
+<div class="content">
+<li>integer = (পূর্ণসংখ্যা)</li>
+<li>float = (ভগ্নাংশ)</li>
+</div>
+<button class="collapsible">JavaScript এ কি প্রিন্ট করার সময় একাধিক বিষয় একসঙ্গে প্রিন্ট করা যায় ?</button>
+<div class="content">
+yes
+</div>
+<button class="collapsible">Variable এর ক্ষেত্রে শুরুতে যেসব নাম ব্যবহার করা যাবে / করা যাবে না?</button>
+<div class="content">
+  <li>Do not start with Number </li>
+  <li>Do not start with Special Character </li>
+  <li>Do not Use Hyphen / Space</li>
+  <li>Do Not Use JavaScript Reserve keywords</li>
+  <li>Use Meaningful Words</li>
+  <li>Use Snake case / camel case </li>
+</div>
+<button class="collapsible">Variable এর ক্ষেত্রে মান বার বার পরিবর্তন করা যায় এবং করা গেলে কোন মানটি Store হবে?</button>
+<div class="content">
+ হুম। <br> সর্বশেষের মানটি  Store হবে।
+</div>
+<button class="collapsible">যদি কোন Variable নাম দেয়া হয় কিন্তু Value না দেয়া হয় তবে কি আসবে?</button>
+<div class="content">
+  Undefined
+</div>
+<button class="collapsible">Undefined বলতে কি বুঝায়?</button>
+<div class="content">
+  অনির্ধারিত
+</div>
+<button class="collapsible">How to show date in javascript?</button>
+<div class="content">
+<pre>
+  
+    var d = new Date(); <br>
+    document.write(d);
+    
+</pre>
+</div>
+<button class="collapsible">how to make new line in javascript ?</button>
+<div class="content">
+  
+    var i = "Hello World!\nThis is my string"; <br>
+document.write(i);
+  
+</div>
+<button class="collapsible">How to make vertical tab in javascript ?</button>
+<div class="content">
+  \v
+</div>
+<button class="collapsible">JavaScript এ Typeof দিয়ে কি করা যায়?</button>
+<div class="content">
+  variable টা কেমন তা বের করা যায়।<br> যেমন:
+  var age = 33; <br>
+  document.write(typeof age);
+</div>
+<button class="collapsible">Undefined বলতে কি বুঝায়?</button>
+<div class="content">
+  অনির্ধারিত
+</div>
+<button class="collapsible">Undefined বলতে কি বুঝায়?</button>
+<div class="content">
+  অনির্ধারিত
 </div>
 <button class="collapsible">Mathemetical Operators ?</button>
 <div class="content">
@@ -125,7 +213,8 @@ h3:hover .hide{
 <button class="collapsible">Comparison Operator ?</button>
 <div class="content">
  <pre>
-  == (Equal Operator)
+   
+        ==(Equal Operator)
 	!= (Not Equal)
 	> (Greater Than)
 	< (Less Than)
@@ -195,50 +284,6 @@ h3:hover .hide{
 <div class="content">
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
-<h3>💡
-  <div class="hide">
-    <button class="collapsible">Hello21</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello22</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello23</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello24</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello25</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello26</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello27</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello28</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello29</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <button class="collapsible">Hello30</button>
-    <div class="content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-  </div>
-</h3>
 
 
 
