--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ marquee{
       <a href="https://isdb-bisew.org/" target="_blank">IsDB</a>
       <a href="https://isdb-bisew.org/careerhub" target="_blank">CareerHub</a>
       <a href="https://tasks.idb-bisew.xyz/exam/" target="_blank">Online-Exam (1281789 / 07/04/1996)</a>
+      <a href="rules.html" target="_blank">Rules</a>
       <a href="Images/wdpf.png" target="_blank">Module-Image</a>
    <h6 style="font-size:5vw; color: aliceblue; text-align: center;">Course-Modules</h6>
    <a href="ComputerFundamental.html" target="_blank">CF(Computer-Fundamental)</a>
